--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-phone-number-input": "^3.1.32",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
