--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.6.0",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
+    "react-blink-text": "^1.0.5",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
     "react-flip-toolkit": "^7.0.13",
@@ -20,7 +21,9 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-motion": "^0.2.1",
     "react-tsparticles": "^1.37.0",
+    "react-typical": "^0.1.3",
     "reactjs-popup": "^2.0.5"
   },
   "scripts": {
